adding company create endpoint
