# app/company/dto.go
@@ -2,6 +2,13 @@ package company
 
 type CompanyCreate struct {
 	Name         string `json:"name"`
-	AddressLine1 string `json:"address_line_1"`
-	AddressLine2 string `json:"address_line_2"`
-}
+	AddressLine1 string `json:"address_line_1" binding:"required"`
+	AddressLine2 string `json:"address_line_2" binding:"required"`
+	State        string `json:"state" binding:"required"`
+	PostalCode   string `json:"postal_code" binding:"required"`
+	City         string `json:"city" binding:"required"`
+	Country      string `json:"country" binding:"required"`
+	Phone        string `json:"phone" binding:"required"`
+	Email        string `json:"email" binding:"required,email"`
+	Website      string `json:"website"`
+} //@name CompanyCreate
